fix - trying to fix fullscreen behaviour of the video on iOS - Safari + hide the video player controls.

--- a/app/portfolio.css
+++ b/app/portfolio.css
@@ -471,6 +471,10 @@
   opacity: 1;
   pointer-events: auto;
 }
+.p-video-controls-bar-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
 .p-vc-btn-fullscreen {
   margin-left: auto;
 }
